objects/Project__c.object
<CustomObject>
    <fields>
        <fullName>BSD_Strategy_MS__c</fullName>
        <description>Captures missions, initiatives, strategies, etc...</description>
        <label>BSD Strategy</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>2017 Strengthen the Core</fullName>
                </value>
                <value>
                    <fullName>2017 Transform Our Business</fullName>
                </value>
                <value>
                    <fullName>2017 Disrupt Our Future</fullName>
                </value>
                <value>
                    <fullName>2016 Hyperdrive Education</fullName>
                    <isActive>false</isActive>
                    <label>2016 Hyperdrive Education</label>
                </value>
                <value>
                    <fullName>2016 Return of the Migration</fullName>
                    <isActive>false</isActive>
                    <label>2016 Return of the Migration</label>
                </value>
                <value>
                    <fullName>2016 Small is the New Big</fullName>
                    <isActive>false</isActive>
                    <label>2016 Small is the New Big</label>
                </value>
                <value>
                    <fullName>2016 The Force Awakens</fullName>
                    <isActive>false</isActive>
                    <label>2016 The Force Awakens</label>
                </value>
                <value>
                    <fullName>2016 The Margin Strikes Back</fullName>
                    <isActive>false</isActive>
                    <label>2016 The Margin Strikes Back</label>
                </value>
                <value>
                    <fullName>2016 Use the Force</fullName>
                    <isActive>false</isActive>
                    <label>2016 Use the Force</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BSD_Strategy__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Select Yes to represent Projects that are part of the yearly BSD objectives</description>
        <label>BSD Strategy</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Business_Benefit__c</fullName>
        <label>Business Benefit</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Cost_Benefit_Score__c</fullName>
        <formula>Case( Text( Cost_Benefit__c ),
&apos;High&apos;, 10,
&apos;Medium&apos;, 5,
&apos;Low&apos;, 1, 0)*3</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cost-Benefit Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cost_Benefit__c</fullName>
        <inlineHelpText>High = High ROI
Medium = Medium ROI
Low = Low ROI</inlineHelpText>
        <label>Cost-Benefit</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Priority</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Due_Date__c</fullName>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Epic_Link__c</fullName>
        <label>Epic Link</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>NAIT-104043</fullName>
                </value>
                <value>
                    <fullName>NAIT-104058</fullName>
                </value>
                <value>
                    <fullName>NAIT-104649</fullName>
                </value>
                <value>
                    <fullName>NAIT-107615</fullName>
                </value>
                <value>
                    <fullName>NAIT-108530</fullName>
                </value>
                <value>
                    <fullName>NAIT-109830</fullName>
                </value>
                <value>
                    <fullName>NAIT-117715</fullName>
                </value>
                <value>
                    <fullName>NAIT-117835</fullName>
                </value>
                <value>
                    <fullName>NAIT-117842</fullName>
                </value>
                <value>
                    <fullName>NAIT-117847</fullName>
                </value>
                <value>
                    <fullName>NAIT-117849</fullName>
                </value>
                <value>
                    <fullName>NAIT-22506</fullName>
                </value>
                <value>
                    <fullName>NAIT-69601</fullName>
                </value>
                <value>
                    <fullName>NAIT-69608</fullName>
                </value>
                <value>
                    <fullName>NAIT-69611</fullName>
                </value>
                <value>
                    <fullName>NAIT-70298</fullName>
                </value>
                <value>
                    <fullName>NAIT-70299</fullName>
                </value>
                <value>
                    <fullName>NAIT-70300</fullName>
                </value>
                <value>
                    <fullName>NAIT-70301</fullName>
                </value>
                <value>
                    <fullName>NAIT-70302</fullName>
                </value>
                <value>
                    <fullName>NAIT-75233</fullName>
                </value>
                <value>
                    <fullName>NAIT-88539</fullName>
                </value>
                <value>
                    <fullName>NAIT-88547</fullName>
                </value>
                <value>
                    <fullName>NAIT-88763</fullName>
                </value>
                <value>
                    <fullName>NAIT-88795</fullName>
                </value>
                <value>
                    <fullName>NAIT-88872</fullName>
                </value>
                <value>
                    <fullName>NAIT-89204</fullName>
                </value>
                <value>
                    <fullName>NAIT-93415</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Executive_Sponsorship__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Executive Supported Project</inlineHelpText>
        <label>Executive Sponsorship</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Function_Area__c</fullName>
        <description>What is the main function area this project is coming from</description>
        <inlineHelpText>Please pick the main function area this project is related to</inlineHelpText>
        <label>Function Area</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Account Maintenance</fullName>
                </value>
                <value>
                    <fullName>Account Setup</fullName>
                </value>
                <value>
                    <fullName>Audits</fullName>
                </value>
                <value>
                    <fullName>Bids</fullName>
                </value>
                <value>
                    <fullName>Bid Writing</fullName>
                </value>
                <value>
                    <fullName>Canada</fullName>
                </value>
                <value>
                    <fullName>Communications</fullName>
                </value>
                <value>
                    <fullName>Compliance</fullName>
                </value>
                <value>
                    <fullName>eCommerce</fullName>
                </value>
                <value>
                    <fullName>Field Sales</fullName>
                </value>
                <value>
                    <fullName>ISO</fullName>
                </value>
                <value>
                    <fullName>Margin</fullName>
                </value>
                <value>
                    <fullName>Marketing</fullName>
                </value>
                <value>
                    <fullName>Migration</fullName>
                </value>
                <value>
                    <fullName>Pricing</fullName>
                </value>
                <value>
                    <fullName>Prospecting</fullName>
                </value>
                <value>
                    <fullName>SalesOps</fullName>
                </value>
                <value>
                    <fullName>SalesPrism</fullName>
                </value>
                <value>
                    <fullName>Training</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Importance__c</fullName>
        <label>Importance</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Critical</fullName>
                </value>
                <value>
                    <fullName>Normal</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Level_of_Effort_Score__c</fullName>
        <formula>Case (Text( Level_of_Effort__c ),
&apos;High&apos;,-6,
&apos;Medium&apos;, -4,
&apos;Low&apos;,-2,0)*1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Level of Effort Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Level_of_Effort__c</fullName>
        <inlineHelpText>High = 13 or 21 points
Medium = 5 or 8 points
Low = &lt;5 points</inlineHelpText>
        <label>Level of Effort</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Priority</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Leverage_Dependencies__c</fullName>
        <inlineHelpText>High = Organizational and Project Dependencies
Medium = Organizational or Project Dependencies
Low = No Dependecies</inlineHelpText>
        <label>Leverage (Dependencies)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Priority</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Leverage_Score__c</fullName>
        <formula>Case( Text(  Leverage_Dependencies__c  ),
&apos;High&apos;, 10,
&apos;Medium&apos;, 5,
&apos;Low&apos;, 1, 0)*1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Leverage Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Objects_Involved__c</fullName>
        <inlineHelpText>Select the objects that will be involved in this project.</inlineHelpText>
        <label>Objects Involved</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Account</fullName>
                </value>
                <value>
                    <fullName>Account Setup</fullName>
                </value>
                <value>
                    <fullName>Assignment_Rule__c</fullName>
                </value>
                <value>
                    <fullName>Contact</fullName>
                </value>
                <value>
                    <fullName>Lead</fullName>
                </value>
                <value>
                    <fullName>Opportunity</fullName>
                </value>
                <value>
                    <fullName>Opportunity Product</fullName>
                </value>
                <value>
                    <fullName>Price Book</fullName>
                </value>
                <value>
                    <fullName>Product</fullName>
                </value>
                <value>
                    <fullName>Quote</fullName>
                </value>
                <value>
                    <fullName>Support</fullName>
                </value>
                <value>
                    <fullName>User</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Parent_Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Project</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>Child Projects</relationshipLabel>
        <relationshipName>Child_Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Percent_Completed__c</fullName>
        <label>% Completed</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Project_Description__c</fullName>
        <label>Project Description</label>
        <length>12000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Project_Funding__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Project Funding</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Project_Issue_Lookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project Issue Lookup</label>
        <referenceTo>Project_Issue__c</referenceTo>
        <relationshipLabel>Projects</relationshipLabel>
        <relationshipName>Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project_Lifecycle__c</fullName>
        <label>Project Lifecycle</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>On Going Support</fullName>
                </value>
                <value>
                    <fullName>Funded Project</fullName>
                </value>
                <value>
                    <fullName>Non Funded Project</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Project_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project_Metrics_Lookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project Metrics Lookup</label>
        <referenceTo>Project_Metrics__c</referenceTo>
        <relationshipLabel>Projects</relationshipLabel>
        <relationshipName>Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project_Milestone_Lookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project Milestone Lookup</label>
        <referenceTo>Project_Milestone__c</referenceTo>
        <relationshipLabel>Projects</relationshipLabel>
        <relationshipName>Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project_Name__c</fullName>
        <description>Project Name</description>
        <label>Project Name</label>
        <length>60</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Project_Name_and_Number_Text__c</fullName>
        <formula>Project_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Name and Number Text</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Name_and_Project_Number__c</fullName>
        <formula>HYPERLINK(&apos;/&apos; &amp;   Id, Project_Name__c, &apos;_self&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Name and Project Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Rank__c</fullName>
        <formula>IF(Executive_Sponsorship__c = True, 99.01+((Cost_Benefit_Score__c +  Level_of_Effort_Score__c  +  Leverage_Score__c  +  Speed_to_Delivery_Score__c  +  Technical_Complexity_Score__c  +  Value_Add_Score__c) *0.01),

IF(Project_Funding__c = True, 98+((Cost_Benefit_Score__c +  Level_of_Effort_Score__c  +  Leverage_Score__c  +  Speed_to_Delivery_Score__c  +  Technical_Complexity_Score__c  +  Value_Add_Score__c) *0.01),

(Cost_Benefit_Score__c +  Level_of_Effort_Score__c  +  Leverage_Score__c  +  Speed_to_Delivery_Score__c  +  Technical_Complexity_Score__c  +  Value_Add_Score__c)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Rank</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Project_Type__c</fullName>
        <label>Project Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Development</fullName>
                </value>
                <value>
                    <fullName>Vanilla Implementation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SOPS_Rank__c</fullName>
        <description>Sales Operations rank</description>
        <label>SOPS Rank</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sales_Ops_Avg_Weekly_Hours__c</fullName>
        <inlineHelpText>Estimate of average weekly hours dedicated to this project</inlineHelpText>
        <label>Sales Ops Avg Weekly Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Speed_to_Delivery_Go_live__c</fullName>
        <inlineHelpText>High = ASAP
Medium = Normal Importance
Low = Low Importance</inlineHelpText>
        <label>Speed to Delivery/Go-live</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Priority</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Speed_to_Delivery_Score__c</fullName>
        <formula>Case( Text(  Speed_to_Delivery_Go_live__c  ),
&apos;High&apos;, 10,
&apos;Medium&apos;, 5,
&apos;Low&apos;, 1, 0)*2</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Speed to Delivery Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                </value>
                <value>
                    <fullName>Final</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Technical_Complexity_Score__c</fullName>
        <formula>Case( Text(  Technical_Complexity__c ),
&apos;High&apos;, 1,
&apos;Medium&apos;, 5,
&apos;Low&apos;, 10, 0)*1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Technical Complexity Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Technical_Complexity__c</fullName>
        <inlineHelpText>High = High Complexity
Medium = Normal Complexity
Low = Low Complexity</inlineHelpText>
        <label>Technical Complexity</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Priority</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Track_Status__c</fullName>
        <label>Track Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Started</fullName>
                </value>
                <value>
                    <fullName>On Track</fullName>
                </value>
                <value>
                    <fullName>Delayed</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Canceled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Value_Add_Score__c</fullName>
        <formula>Case (Text(Value_Add_to_Sales_Org__c),
&apos;High&apos;,10,
&apos;Medium&apos;, 5,
&apos;Low&apos;,1,0) * 3</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Value Add Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Value_Add_to_Sales_Org__c</fullName>
        <inlineHelpText>High = Adds High Value to Sales Org
Medium = Adds Medium Value to Sales Org
Low = Adds Low Value to Sales Org</inlineHelpText>
        <label>Value Add to Sales Org</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Priority</valueSetName>
        </valueSet>
    </fields>
    <label>Project</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Project_Manager__c</columns>
        <columns>Project_Name__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Project_Type__c</columns>
        <columns>Percent_Completed__c</columns>
        <columns>Track_Status__c</columns>
        <columns>Epic_Link__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Track_Status__c</field>
            <operation>notEqual</operation>
            <value>Completed</value>
        </filters>
        <label>All Open Projects</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <columns>NAME</columns>
        <columns>Project_Name__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>Project_Manager__c</columns>
        <columns>Start_Date__c</columns>
        <columns>Due_Date__c</columns>
        <columns>Percent_Completed__c</columns>
        <columns>Track_Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Current_Sales_Enablement</fullName>
        <columns>SOPS_Rank__c</columns>
        <columns>Project_Name_and_Project_Number__c</columns>
        <columns>Project_Manager__c</columns>
        <columns>NAME</columns>
        <columns>Objects_Involved__c</columns>
        <columns>Track_Status__c</columns>
        <columns>Due_Date__c</columns>
        <columns>Sales_Ops_Avg_Weekly_Hours__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Project__c.Sales_Enablement</value>
        </filters>
        <filters>
            <field>Track_Status__c</field>
            <operation>equals</operation>
            <value>Started,On Track,Delayed</value>
        </filters>
        <filters>
            <field>Project_Lifecycle__c</field>
            <operation>notEqual</operation>
            <value>On Going Support</value>
        </filters>
        <label>Current Sales Enablement Projects</label>
        <language>en_US</language>
        <sharedTo>
            <group>Sales_Enablement_Management</group>
            <group>Sales_Ops_Team</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Sales_Enablement</fullName>
        <columns>Project_Manager__c</columns>
        <columns>Project_Name_and_Project_Number__c</columns>
        <columns>NAME</columns>
        <columns>Parent_Project__c</columns>
        <columns>Start_Date__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>Track_Status__c</columns>
        <columns>Percent_Completed__c</columns>
        <columns>LAST_ACTIVITY</columns>
        <columns>Due_Date__c</columns>
        <columns>Project_Name__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Project__c.Sales_Enablement</value>
        </filters>
        <label>Sales Enablement Projects (Open and Clos</label>
        <language>en_US</language>
        <sharedTo>
            <group>Sales_Enablement_Management</group>
            <group>Sales_Ops_Team</group>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>Project-{000000}</displayFormat>
        <label>Project Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Projects</pluralLabel>
    <recordTypes>
        <fullName>SalesOps</fullName>
        <active>true</active>
        <description>This Recordtype gathers specific items for SalesOps Projects</description>
        <label>SalesOps</label>
    </recordTypes>
    <recordTypes>
        <fullName>Sales_Enablement</fullName>
        <active>true</active>
        <description>This Recordtype gathers specific items for Sales Enablement Projects</description>
        <label>Sales Enablement</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>